# -budget-management-service

./: README.md  pyproject.toml
.github/: pull_request_template.md
budget/: models.py  serializers.py  urls.py  views.py
budget/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
expenditure/: admin.py  models.py  serializers.py  urls.py  views.py
expenditure/migrations/: 0001_initial.py  0002_alter_expenditure_comment.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py
